Methodology chapter creation

--- a/0_resumen.tex
+++ b/0_resumen.tex
@@ -68,7 +68,7 @@ Dedicado a mis pequeños, la fuente de mi alegría. Espero serviros de inspiraci
 %%%%%%%%%%%%%%%%%%%
 \chapter*{Acknowledgements}
 
-If deemed appropriate, mention the people, companies or institutions that have contributed to the realization of this project.
+I would like to acknowledge the work of the International Sink Imaging Collaboration \cite{isic_web} in helping to reduce skin cancer mortality.
 
 %%%%%%%%%%%%%%%%
 %%% ABSTRACT %%%
