--- a/1_introduccion.tex
+++ b/1_introduccion.tex
@@ -8,7 +8,7 @@
 %%%%%%%%%%%%%%%%%%%
 %%% Motivation %%%
 %%%%%%%%%%%%%%%%%%%
-This journey towards the realization of this exciting work on dermoscopic classification of skin disease is a path that combines science, technology and medical care in a unique way. This project is much more than a task at the end of a long master's journey; it is a challenge and an opportunity.
+This journey towards the realisation of this exciting work on dermoscopic classification of skin disease is a path that combines science, technology and medical care in a unique way. This project is much more than a task at the end of a long master's journey; it is a challenge and an opportunity.
 
 This job represents a challenge, working with large image files which require pre-processing of data. Added to this is the development of a classification model that must distinguish between nine different patterns. All these points are compounded by the fact of doing the work in a language that is not my mother tongue.
 
@@ -36,6 +36,30 @@ In parallel, the dataset contains a metadata file. This information can help to 
 %%%%%%%%%%%%%%%%%%%
 %%% Methodology %%%
 %%%%%%%%%%%%%%%%%%%
+
+For the implementation of this project, we will use the Cross Industry Standard Process for Data Mining or\textbf{CRISP-DM} methodology. This methodology consists of six phases that are carried out cyclically and that allow feedback to previous phases in order to complement the deficiencies of other phases. The following diagram shows the cyclical circuit of the six phases of this methodology.
+
+\begin{figure}[h]
+    \begin{center}
+        \includegraphics[scale=0.40]{images/CRISP-DM_Process_Diagram.png}
+        \caption{Process diagram showing the phases of the CRISP-DM methodology}
+    \label{fig:CRISP-DM}    
+    \end{center}
+\end{figure}
+
+The methodology phases and the adaptation to the project are described below:
+
+\begin{enumerate}
+    \item \textbf{Business understanding}
+    
+    The first phase of the \textbf{CRISP-DM} model starts with understanding the main objectives of the project. This is covered in the Goals section of the document. In this case, there is \textbf{no associated licensing cost}, because the data is left under an open licence (see Licensing section).
+    \item \textbf{Data understanding}
+    \item \textbf{Data Preparation}
+    \item \textbf{Modelling}
+    \item \textbf{Evaluation}
+    \item \textbf{Deployment}
+\end{enumerate}
+
 
 \section{Planning}
 
