--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \usepackage{algorithmic}
 \usepackage{booktabs}
 
+
 % general settings
 \hypersetup{
 linktocpage=true,
@@ -49,6 +50,8 @@ citecolor=blue,
 % DOCUMENT %
 %%%%%%%%%%%%
 \begin{document}
+
+%\addbibresource{Dermatological-lesion-classification.bib} %Zotero bibliobrafy file
 
 % cover page
 \input{0_titulo.tex}
@@ -103,5 +106,6 @@ citecolor=blue,
 \bibliographystyle{plain}
 %\bibliography{references}
 \bibliography{referencias}
+%\bibliography{Dermatological-lesion-classification}
 
 \end{document}
