--- a/referencias.bib
+++ b/referencias.bib
@@ -5,23 +5,13 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@article{Sweeney:2002,
-	Acmid = {774552},
-	Address = {River Edge, NJ, USA},
-	Author = {Sweeney, Latanya},
-	Date-Modified = {2011-02-01 10:41:02 +0100},
-	Doi = {10.1142/S0218488502001648},
-	Issn = {0218-4885},
-	Issue = {5},
-	Journal = {Int. J. Uncertain. Fuzziness Knowl.-Based Syst.},
-	Keywords = {data anonymity, data fusion, data privacy, privacy, re-identification},
-	Month = {October},
-	Numpages = {14},
-	Pages = {557--570},
-	Publisher = {World Scientific Publishing Co., Inc.},
-	Title = {k-anonymity: a model for protecting privacy},
-	Url = {http://portal.acm.org/citation.cfm?id=774544.774552},
-	Volume = {10},
-	Year = {2002},
-	Bdsk-Url-1 = {http://portal.acm.org/citation.cfm?id=774544.774552},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1142/S0218488502001648}}
+@online{isic_web,
+	title = {{ISIC} {\textbar} International Skin Imaging Collaboration},
+	url = {https://www.isic-archive.com},
+	abstract = {{ISIC} is improving skin cancer diagnosis by promoting standards in skin imaging, gathering and sharing dermatologic images, \& engaging clinicians \& computer vision researchers},
+	titleaddon = {{ISIC}},
+	urldate = {2023-10-08},
+	langid = {english},
+	keywords = {{ISIC}},
+}
+
