--- a/0_resumen.tex
+++ b/0_resumen.tex
@@ -36,7 +36,7 @@ Title of the project: & Dermatological lesion classification\\
 \hline
 Author's name: & Jesús González Leal\\
 \hline
-Collaborating teacher's name: & Jordi de la Tore\\
+Collaborating teacher's name: & Jordi de la Torre Gallart\\
 \hline
 PRA's name: & Laura Subirats\\
 \hline
@@ -51,7 +51,7 @@ Language of the project: & English\\
 Code repository: & https://github.com/chus73/Dermatological-lesion-classification\\
 
 \hline
-Keywords & \textit Dermatological Diagnostic, Image classification  \\
+Keywords & \textit Dermatological Diagnostic, Image classification, CNN  \\
 \hline
 \end{tabular}
 \end{table}
@@ -68,7 +68,9 @@ Dedicado a mis pequeños, la fuente de mi alegría. Espero serviros de inspiraci
 %%%%%%%%%%%%%%%%%%%
 \chapter*{Acknowledgements}
 
-I would like to acknowledge the work of the International Sink Imaging Collaboration \cite{isic_web} in helping to reduce skin cancer mortality.
+I would like to acknowledge the work of the International Sink Imaging Collaboration \cite{isic_web} in helping to reduce skin cancer mortality. 
+
+I would also like to acknowledge the "Universitat Oberta de Catalunya" for giving me the opportunity to grow personally and professionally.
 
 %%%%%%%%%%%%%%%%
 %%% ABSTRACT %%%
@@ -86,4 +88,4 @@ The following project presents the use of deep learning algorithms in order to c
 
 \vspace{1.5cm}
 
-\textbf{Keywords}: dermatoscopy, carcinoma, classification.
+\textbf{Keywords}: dermatoscopy, carcinoma, skin lesion classification, CNN.
