--- a/Dermatological-lesion-classification.bib
+++ b/Dermatological-lesion-classification.bib
@@ -1,4 +1,39 @@
 
+@online{luciaclemares_que_2023,
+	title = {¿Qué beneficios tiene la Inteligencia Artificial en la medicina?},
+	url = {https://www.telefonica.com/es/sala-comunicacion/blog/que-beneficios-tiene-la-inteligencia-artificial-en-la-medicina/},
+	abstract = {El uso de la Inteligencia Artificial en la medicina permite crear modelos de aprendizaje automático para personalizar los tratamientos de los pacientes},
+	titleaddon = {Telefónica},
+	author = {luciaclemares},
+	urldate = {2023-10-09},
+	date = {2023-03-10},
+	langid = {spanish},
+	keywords = {Motivation},
+}
+
+@online{noauthor_aplicaciones_2021,
+	title = {Aplicaciones reales de la inteligencia artificial en la medicina},
+	url = {https://www.apd.es/aplicaciones-inteligencia-artificial-en-medicina/},
+	abstract = {¿Conoces los efectos de la inteligencia artificial en la medicina? Descubre todos los beneficios que puede aportar y sus aplicaciones más novedosas},
+	titleaddon = {{APD} España},
+	urldate = {2023-10-09},
+	date = {2021-02-23},
+	langid = {spanish},
+	keywords = {Motivation},
+}
+
+@inreference{noauthor_cross_2023,
+	title = {Cross Industry Standard Process for Data Mining},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://es.wikipedia.org/w/index.php?title=Cross_Industry_Standard_Process_for_Data_Mining&oldid=154176991},
+	abstract = {{CRISP}-{DM}  (del inglés Cross Industry Standard Process for Data Mining)[1]​ se trata de un modelo estándar abierto del proceso que describe los enfoques comunes que utilizan los expertos en minería de datos. Es el modelo analítico más usado.[2]​},
+	booktitle = {Wikipedia, la enciclopedia libre},
+	urldate = {2023-10-08},
+	date = {2023-09-29},
+	langid = {spanish},
+	note = {Page Version {ID}: 154176991},
+}
+
 @online{noauthor_isic_nodate,
 	title = {{ISIC} {\textbar} International Skin Imaging Collaboration},
 	url = {https://www.isic-archive.com},
