--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \usepackage{booktabs}
 
 
+
 % general settings
 \hypersetup{
 linktocpage=true,
@@ -100,12 +101,16 @@ citecolor=blue,
 \input{1_introduccion.tex}
 
 \input{2_StateOfTheArt}
-
-% bibliography
+%%%%%%%%%%%%%%%%
+% bibliography %
+%%%%%%%%%%%%%%%%
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{plain}
-%\bibliography{references}
+%\bibliographystyle{ACM-Reference-Format}
+
+
 \bibliography{referencias}
+
 %\bibliography{Dermatological-lesion-classification}
 
 \end{document}
