--- a/referencias.bib
+++ b/referencias.bib
@@ -15,3 +15,25 @@
 	keywords = {{ISIC}},
 }
 
+@online{luciaclemares_que_2023,
+	title = {¿Qué beneficios tiene la Inteligencia Artificial en la medicina?},
+	url = {https://www.telefonica.com/es/sala-comunicacion/blog/que-beneficios-tiene-la-inteligencia-artificial-en-la-medicina/},
+	abstract = {El uso de la Inteligencia Artificial en la medicina permite crear modelos de aprendizaje automático para personalizar los tratamientos de los pacientes},
+	titleaddon = {Telefónica},
+	author = {luciaclemares},
+	urldate = {2023-10-09},
+	date = {2023-03-10},
+	langid = {spanish},
+	keywords = {Motivation},
+}
+
+@online{apd_aplicaciones_IA_Medicina,
+	title = {Aplicaciones reales de la inteligencia artificial en la medicina},
+	url = {https://www.apd.es/aplicaciones-inteligencia-artificial-en-medicina/},
+	abstract = {¿Conoces los efectos de la inteligencia artificial en la medicina? Descubre todos los beneficios que puede aportar y sus aplicaciones más novedosas},
+	titleaddon = {{APD} España},
+	urldate = {2023-10-09},
+	date = {2021-02-23},
+	langid = {spanish},
+	keywords = {Motivation},
+}
