Añadido licencia y correcciones léxicas. Primera entrega. Módulo 1

--- a/0_resumen.tex
+++ b/0_resumen.tex
@@ -7,20 +7,27 @@
 %%%%%%%%%%%%%%%%
 \chapter*{Credits/Copyright}
 
-A page with the specification of credits/copyright for the project (either application on one side and documentation on the other, or unified), as well as the use of third-party trademarks, products or services (including source code). If a person other than the author collaborated on the project, their identity and what they did must be explicitly stated.
+The dataset used in this work is protected by the CC-BY-NC licence \cite{cc_by_nc_license}.
 
-Below is the most common case, but it can be modified for any other alternative:
+\begin{figure}[ht]
+\centering
+\includegraphics[scale=1]{images/CC BY-NC license.png}
+\end{figure}
 
 \vspace{1cm}
+
+This document, and its code, are licensed under Attribution-NonCommercial-NoDerivs 3.0 Spain (CC BY-NC-ND 3.0 ES) 
+
+\href{https://creativecommons.org/licenses/by-nc-nd/3.0/es/}{3.0 Spain of CreativeCommons}.
+
 
 \begin{figure}[ht]
 \centering
 \includegraphics[scale=1]{images/license.png}
 \end{figure}
 
-Attribution-NonCommercial-NoDerivs 3.0 Spain (CC BY-NC-ND 3.0 ES) 
 
-\href{https://creativecommons.org/licenses/by-nc-nd/3.0/es/}{3.0 Spain of CreativeCommons}.
+
 
 %%%%%%%%%%%%%
 %%% RECORD %%%
@@ -80,7 +87,9 @@ I would also like to acknowledge the "Universitat Oberta de Catalunya" for givin
 
 \onehalfspacing
 
-The skin is the largest organ in the body and the first barrier of defence against aggression from the outside world as well as helping the body to regulate its temperature. In order to examine skin lesions, dermatologists use dermatoscopy, which consists of illuminating and magnifying the area to be examined. 
+The skin is the largest organ in the body, as well as the first barrier for defending our inner organs against any aggression, besides helping the body to regulate its temperature. Considering the importance of the skin for human beings, it is necessary to examine skin lesions and because of that dermatologists use dermatoscopy, which is a device for illuminating and magnifying the area to be examined, to monitor any present injury.  
+
+During recent past decades, enormous advances in AI medical field have experienced important improvements due to the use of deep networks. They are able to diagnose with reliability as well as speed. 
 
 The following project presents the use of deep learning algorithms in order to classify nine different diagnoses such as melanoma, basal cell carcinoma, vascular lesion and others of this kind.
 
