--- a/1_introduccion.tex
+++ b/1_introduccion.tex
@@ -8,20 +8,20 @@
 %%%%%%%%%%%%%%%%%%%
 %%% Motivation %%%
 %%%%%%%%%%%%%%%%%%%
-This journey towards the realisation of this exciting work on dermoscopic classification of skin disease is a path that combines science, technology and medical care in a unique way. 
+This journey towards the elaboration of this exciting work on dermoscopic classification of skin disease is a path that combines science, technology and medical care uniquely. 
 
-Artificial Intelligence (AI) is bringing about a fourth industrial revolution that is already affecting our society. Specifically, its incorporation in the area of medicine has a very significant impact on different fronts (\cite{luciaclemares_que_2023} y \cite{apd_aplicaciones_IA_Medicina}):
+Artificial Intelligence (AI) is bringing about a fourth industrial revolution that is already affecting our society. In concrete, its incorporation into medicine has a very significant impact on different medical areas (\cite{luciaclemares_que_2023} y \cite{apd_aplicaciones_IA_Medicina}) such as:
 
 \begin{itemize}
-    \item \textbf{A more accurate and faster diagnosis}: The use of advanced search techniques on large medical data sets allows for more accurate and reliable diagnoses. 
+    \item \textbf{A more accurate and organised diagnosis}: The use of advanced search techniques on large medical data sets allows for more accurate and reliable diagnostic. 
     \item \textbf{Faster and more efficient drug development}: Accelerating the research and development of new drugs.
-    \item \textbf{Personalised care}: AI can customise treatment plans to patients' individual needs, optimising effectiveness and minimising side effects
-    \item \textbf{Accuracy and speed in diagnostic imaging}. Deep networks specialised in image recognition have a pattern detection capability that is far superior to that of humans. They can also make a diagnosis with very little delay. For all these reasons, they will be an essential tool for improving patient care. 
+    \item \textbf{Personalised care}: AI can customise treatment plans for each patient's individual needs optimising, at the same time, effectiveness and minimising side effects.
+    \item \textbf{Images diagnostic more accurate and faster}. The worldwide name of AI will be recognised henceforth in this work as Deep networks. A part of these networks is specialised image recognition. They have a pattern detection capability that is by far superior to any human being. They can also make a diagnosis with a very little delay. For the aforementioned reasons, it will be an essential tool for improving patient care and treatment. 
 \end{itemize}
 
-It is this last point that is related to the scope of this project. Personally, this project is much more than a task at the end of a long master's journey. This job represents a challenge, working with large image files which require pre-processing of data. Added to this is the development of a classification model that must distinguish between nine different patterns.
+This last point is the core of the scope of this project. Personally, this project is much more than a task for ending a long master's journey. This job represents a challenge because working with large image files requires pre-processed data. In addition to this, the model to be developed is a classification one that should distinguish among nine different patterns.
 
-On the other hand, it also represents an opportunity to imagine that my work could one day help in the early detection of skin disease, and thus improve medical care.
+It also represents an opportunity to imagine that my work could be helpful, one day, in the early detection of multiple skin diseases, and thus improve medical care and services.
 
 
 
