--- a/Dermatological-lesion-classification.bib
+++ b/Dermatological-lesion-classification.bib
@@ -1,4 +1,10 @@
 
+@online{noauthor_cc_nodate,
+	title = {{CC} {BY}-{NC} 4.0 Deed {\textbar} Attribution-{NonCommercial} 4.0 International {\textbar} Creative Commons},
+	url = {https://creativecommons.org/licenses/by-nc/4.0/},
+	urldate = {2023-10-10},
+}
+
 @online{luciaclemares_que_2023,
 	title = {¿Qué beneficios tiene la Inteligencia Artificial en la medicina?},
 	url = {https://www.telefonica.com/es/sala-comunicacion/blog/que-beneficios-tiene-la-inteligencia-artificial-en-la-medicina/},
