--- a/referencias.bib
+++ b/referencias.bib
@@ -5,6 +5,11 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@online{cc_by_nc_license,
+	title = {{CC} {BY}-{NC} 4.0 Deed {\textbar} Attribution-{NonCommercial} 4.0 International {\textbar} Creative Commons},
+	url = {https://creativecommons.org/licenses/by-nc/4.0/},
+	urldate = {2023-10-10},
+}
 @online{isic_web,
 	title = {{ISIC} {\textbar} International Skin Imaging Collaboration},
 	url = {https://www.isic-archive.com},
